--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://mymaswayvpn.github.io/assets/img/favicon.png" rel="icon">
+  <link href="https://mymaswayvpn.github.io/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="https://mymaswayvpn.github.io/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Vesperr
@@ -44,7 +44,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="https://mymasway.github.io/index.html"><img src="assets/img/logo.png"></a>MasWayVPN</h1>
+        <h1><a href="https://mymasway.github.io/index.html"><img src="https://mymaswayvpn.github.io/assets/img/logo.png"></a>MasWayVPN</h1>
         </div>
 
       <nav id="navbar" class="navbar">
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="https://mymaswayvpn.github.io/assets/img/hero-img.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -224,16 +224,16 @@
   <a href="hero" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/aos/aos.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="https://mymaswayvpn.github.io/assets/js/main.js"></script>
 
 </body>
 
