--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="hero">Get Started</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="getstarted scrollto" href="#hero">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -221,7 +221,7 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="hero" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#hero" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="https://mymaswayvpn.github.io/assets/vendor/purecounter/purecounter_vanilla.js"></script>
